--- a/amplify.yml
+++ b/amplify.yml
@@ -1,8 +1,17 @@
 version: 1
-frontend:
+backend:
   phases:
     build:
       commands:
+        - amplifyPush --simple
+frontend:
+  phases:
+    #preBuild:
+    #  commands:
+    #    - aws s3 sync s3://${BUCKET_NAME}/ ./content/
+    build:
+      commands:
+        - env
         - hugo --buildDrafts
   artifacts:
     baseDirectory: public
