--- a/amplify.yml
+++ b/amplify.yml
@@ -2,14 +2,14 @@ version: 1
 env:
   variables:
     AMPLIFY_CLI_VERSION: 8.1.0
-backend:
-  phases:
-    preBuild:
-      commands:
-        - npm i -g @aws-amplify/cli@${AMPLIFY_CLI_VERSION}
-    build:
-      commands:
-        - amplifyPush --simple
+#backend:
+#  phases:
+#    preBuild:
+#      commands:
+#        - npm i -g @aws-amplify/cli@${AMPLIFY_CLI_VERSION}
+#    build:
+#      commands:
+#        - amplifyPush --simple
 frontend:
   phases:
     #preBuild:
